<resources>
    <string name="app_name">PillNotes</string>
    <string name="test_time">12:34</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="googlepath">Google path</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_feedback">Vibration feedback</string>
    <string name="sound">Sound</string>
    <string name="sound_feedback">Sound feedback</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_light">Light theme</string>
    <string name="value_theme_dark">dark</string>
    <string name="value_theme_light">light</string>
    <string name="key_theme">theme</string>
    <string name="key_email_me">emailme</string>
    <string name="theme">Theme</string>
    <string name="email_me">Email me</string>
    <string name="are_you_sure_delete_this">Are you sure delete this?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="add_note">Add note</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_contact">Add contact</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="choose_location">Choose location:</string>
    <string name="choose_task">Choose task</string>
    <string name="choose_priority">Choose priority</string>
    <string name="choose_period">Choose period</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_profession">Enter profession</string>
    <string name="enter_title_hint">Please, enter title</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="enter_task_hint">Please, enter task</string>
    <string name="default_time_text">12:34</string>
    <string name="default_date_text">23/02/2022</string>
    <string name="enter_time_hint">Please, choose time</string>
    <string name="take_pill">Take a pill</string>
    <string name="visit_doctor">Visit doctor</string>
    <string name="do_something">Do something</string>
    <string name="very_important">Very important</string>
    <string name="important">Important</string>
    <string name="not_important">Not important</string>
    <string name="create">Create</string>
    <string name="upgrade">Upgrade</string>
    <string name="one_time">One time</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="other">Other...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="chooseemail">Choose Email Client</string>
    <string name="choose_call">Choose how You call:</string>
    <string name="choose_tracker">Choose location tracker:</string>
    <string name="select_gallery">Select photo from Gallery</string>
    <string name="capture_camera">Capture photo from Camera</string>
    <string name="select_action">Select action:</string>
    <string name="ok">ok</string>
    <string name="here">here ?</string>
    <string name="you_are_here">You are here</string>
    <string name="no_location">not checked location</string>
    <string name="lets_on_gps">Let`s go to Settings ON GPS</string>


    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
</resources>