<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:visible="true" />

    <item
        android:id="@+id/menuContacts"
        android:icon="@drawable/ic_account_24"
        android:title="@string/contacts"
        android:visible="true" />

    <item
        android:id="@+id/menuCat"
        android:icon="@drawable/ic_baseline_thumb_up_300"
        android:title="@string/funny_cat"
        android:visible="true" />

    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        android:visible="true" />

</menu>
