<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_home_fragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPreviousWeekAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:backgroundTint="?attr/background_home_fragment"
                android:textColor="?attr/text_color_item_name"
                android:textSize="@dimen/size_pill_item_result"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_date_text"
                android:textAlignment="center"
                android:textColor="?attr/background_home_fragment"
                android:textSize="@dimen/size_pill_item_task" />

            <Button
                android:id="@+id/btnNextWeekAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forward"
                android:backgroundTint="?attr/background_tint"
                android:textColor="?attr/text_color_item_name"
                android:textSize="@dimen/size_pill_item_task"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="?attr/background_tint"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCalendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llCalendar">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:backgroundTint="?attr/transparent"
        app:icon="@drawable/add_circle_outline_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddNote"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/margin_max"
        android:layout_marginBottom="@dimen/margin_medium"
        android:backgroundTint="?attr/transparent"
        android:contentDescription="@string/add_note"
        android:src="@drawable/ic_add_notes_48"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingMenu"
        app:layout_constraintEnd_toEndOf="@id/floatingMenu">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddContact"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/margin_max"
        android:layout_marginBottom="@dimen/margin_medium"
        android:backgroundTint="?attr/transparent"
        android:contentDescription="@string/add_alarm"
        android:src="@drawable/add_alert_48"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingAddNote"
        app:layout_constraintEnd_toEndOf="@id/floatingMenu">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_min"
        android:text="@string/add_note"
        android:textColor="?attr/text_color_note_enter_text"
        android:textSize="@dimen/size_pill_item_task"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/floatingAddNote"
        app:layout_constraintEnd_toStartOf="@id/floatingAddNote"
        app:layout_constraintTop_toTopOf="@id/floatingAddNote">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_min"
        android:text="@string/add_contact"
        android:textColor="?attr/text_color_note_enter_text"
        android:textSize="@dimen/size_pill_item_task"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/floatingAddContact"
        app:layout_constraintEnd_toStartOf="@id/floatingAddContact"
        app:layout_constraintTop_toTopOf="@id/floatingAddContact">

    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>