<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home_fragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/enter_title"
        android:textColor="@color/text_color_note_head"
        android:textSize="@dimen/size_pill_note_head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/enter_title_hint"
        android:textColor="@color/text_color_note_enter_text"
        android:textColorHint="@color/text_color_note_enter_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoteTitle">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/enter_time"
        android:textColor="@color/text_color_note_head"
        android:textSize="@dimen/size_pill_note_head"
        app:layout_constraintEnd_toStartOf="@id/tvNoteDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etNoteTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/default_time_text"
        android:textColor="@color/text_color_note_enter_text"
        app:layout_constraintEnd_toStartOf="@id/etNoteDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoteTime">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/enter_date"
        android:textColor="@color/text_color_note_head"
        android:textSize="@dimen/size_pill_note_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNoteTime"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etNoteDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/default_date_text"
        android:textColor="@color/text_color_note_enter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etNoteTime"
        app:layout_constraintTop_toBottomOf="@id/tvNoteTime">

    </androidx.appcompat.widget.AppCompatTextView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/enter_task"
        android:textColor="@color/text_color_note_head"
        android:textSize="@dimen/size_pill_note_head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTime">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/enter_task_hint"
        android:textColor="@color/text_color_note_enter_text"
        android:textColorHint="@color/text_color_note_enter_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoteTask">

    </androidx.appcompat.widget.AppCompatEditText>

</androidx.constraintlayout.widget.ConstraintLayout>